--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
         <header class="header">
           <div class="title-block">
             <div class="title-row">
-              <img src="https://drive.google.com/uc?export=view&id=1uaMGMDArmF5qMMf15ywawHWvUtI1K1c1" alt="Grupo Asserth" class="brand-logo" />
+              <img src="logo_empresa.png" alt="Grupo Asserth" class="brand-logo" />
               <div>
                 <h1>Atlas IA • Monitoria de Atendimentos</h1>
                 <p>Envie a gravação e receba um parecer técnico estruturado em poucos minutos.</p>
@@ -1755,4 +1755,5 @@
   </script>
 </body>
 </html>
+
 
