--- a/index.html
+++ b/index.html
@@ -86,13 +86,14 @@
     .title-row {
       display: flex;
       align-items: center;
-      gap: 10px;
+      gap: 14px;
     }
 
     .brand-logo {
-      width: 36px;
-      height: 36px;
+      width: 44px;
+      height: 44px;
       border-radius: 999px;
+      object-fit: contain;
     }
 
     .title-block h1 {
@@ -1755,5 +1756,6 @@
   </script>
 </body>
 </html>
+
 
 
